CREATE TABLE `User` (
  `id` VARCHAR(255) PRIMARY KEY NOT NULL,
  `username` VARCHAR(255) UNIQUE NOT NULL,
  `name` VARCHAR(255) NOT NULL,
  `email` VARCHAR(255) UNIQUE NOT NULL,
  `password` VARCHAR(255) NOT NULL,
  `pfpUrl` VARCHAR(255),
  `createdAt` TIMESTAMP NOT NULL DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE `Session` (
  `id` VARCHAR(255) PRIMARY KEY NOT NULL,
  `userId` VARCHAR(255) NOT NULL,
  `createdAt` TIMESTAMP NOT NULL DEFAULT (CURRENT_TIMESTAMP),
  `expiresAt` TIMESTAMP
);

CREATE TABLE `DailyHabit` (
  `id` INTEGER PRIMARY KEY NOT NULL AUTO_INCREMENT,
  `name` VARCHAR(255) NOT NULL,
  `details` VARCHAR(255),
  `iconPath` VARCHAR(255) NOT NULL,
  `timeGoal` INTEGER NOT NULL DEFAULT 0,
  `timeSpent` INTEGER NOT NULL DEFAULT 0,
  `userId` VARCHAR(255) NOT NULL,
  `createdAt` TIMESTAMP NOT NULL DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE `WeeklyHabit` (
  `id` INTEGER PRIMARY KEY NOT NULL AUTO_INCREMENT,
  `name` VARCHAR(255) NOT NULL,
  `details` VARCHAR(255),
  `iconPath` VARCHAR(255) NOT NULL,
  `userId` VARCHAR(255) NOT NULL,
  `createdAt` TIMESTAMP NOT NULL DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE `WeeklyHabitDay` (
  `habitId` INTEGER NOT NULL,
  `day` ENUM ('Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun') NOT NULL,
   PRIMARY KEY (`day`, `habitId`)
);

CREATE TABLE `ActivityType` (
  `id` INTEGER PRIMARY KEY NOT NULL AUTO_INCREMENT,
  `name` VARCHAR(255) NOT NULL,
  `details` VARCHAR(255),
  `color` VARCHAR(255) NOT NULL DEFAULT '#c8e6c9',
  `iconPath` VARCHAR(255) NOT NULL,
  `visibility` ENUM('everyone', 'friends', 'private') NOT NULL DEFAULT 'private',
  `userId` VARCHAR(255) NOT NULL
);

CREATE TABLE `ActivityEntry` (
  `id` INTEGER PRIMARY KEY NOT NULL AUTO_INCREMENT,
  `date` TIMESTAMP NOT NULL DEFAULT (CURRENT_TIMESTAMP),
  `note` VARCHAR(255) NOT NULL,
  `typeId` INTEGER NOT NULL
);

CREATE TABLE `Notification` (
  `id` VARCHAR(255) PRIMARY KEY NOT NULL,
  `createdAt` TIMESTAMP NOT NULL DEFAULT (CURRENT_TIMESTAMP),
  `payload` VARCHAR(255) NOT NULL,
  `type` VARCHAR(255) NOT NULL,
  `userId` VARCHAR(255) NOT NULL
);

CREATE TABLE `DailyHabitStat` (
  `id` INTEGER PRIMARY KEY NOT NULL AUTO_INCREMENT,
  `completed` boolean NOT NULL,
  `date` TIMESTAMP NOT NULL,
  `habitId` INTEGER,
  `streakC` INTEGER NOT NULL DEFAULT 0,
  `streakL` INTEGER NOT NULL DEFAULT 0
);

ALTER TABLE `Session` ADD FOREIGN KEY (`userId`) REFERENCES `User` (`id`) ON DELETE RESTRICT ON UPDATE CASCADE;

ALTER TABLE `DailyHabit` ADD FOREIGN KEY (`userId`) REFERENCES `User` (`id`) ON DELETE RESTRICT ON UPDATE CASCADE;

ALTER TABLE `WeeklyHabit` ADD FOREIGN KEY (`userId`) REFERENCES `User` (`id`) ON DELETE RESTRICT ON UPDATE CASCADE;

ALTER TABLE `ActivityType` ADD FOREIGN KEY (`userId`) REFERENCES `User` (`id`) ON DELETE RESTRICT ON UPDATE CASCADE;

ALTER TABLE `ActivityEntry` ADD FOREIGN KEY (`typeId`) REFERENCES `ActivityType` (`id`) ON DELETE CASCADE ON UPDATE CASCADE;

ALTER TABLE `Notification` ADD FOREIGN KEY (`userId`) REFERENCES `User` (`id`) ON DELETE RESTRICT ON UPDATE CASCADE;

ALTER TABLE `WeeklyHabitDay` ADD FOREIGN KEY (`habitId`) REFERENCES `WeeklyHabit` (`id`) ON DELETE CASCADE ON UPDATE CASCADE;

ALTER TABLE `DailyHabitStat` ADD FOREIGN KEY (`habitId`) REFERENCES `DailyHabit` (`id`) ON DELETE SET NULL ON UPDATE CASCADE;
