Table User {
  id varchar [primary key, not null]
  username varchar [unique, not null]
  name varchar [not null]
  email varchar [unique, not null]
  password varchar [not null]
  pfpUrl varchar [null]
  createdAt timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table Session {
  id varchar [primary key, not null]
  userId varchar [not null]
  createdAt timestamp [not null, default: `CURRENT_TIMESTAMP`]
  expiresAt timestamp [null]
}

Table DailyHabit {
  id integer [primary key, increment, not null]
  name varchar [not null]
  details varchar [null]
  iconPath varchar [not null]
  timeGoal integer [not null, default: 0]
  timeSpent integer [not null, default: 0]
  userId varchar [not null]
  createdAt timestamp [not null, default: `CURRENT_TIMESTAMP`]
  isArchived bool [not null, default: false]
}

Table WeeklyHabit {
  id integer [primary key, increment, not null]
  name varchar [not null]
  details varchar [null]
  iconPath varchar [not null]
  userId varchar [not null]
  createdAt timestamp [not null, default: `CURRENT_TIMESTAMP`]
  isArchived bool [not null, default: false]
}

Table WeeklyHabitDay {
  habitId integer [not null]
  day days [null]

  indexes {
    (day, habitId) [pk]
  }
}

Table WeeklyHabitStat {
  id integer [primary key, increment, not null]
  habitId integer [not null]
  completed bool [not null, default: false]
  weekNumber integer [not null]
  date timestamp [not null]
}

Table ActivityType {
  id integer [primary key, increment, not null]
  name varchar [not null]
  details varchar [null]
  color varchar [not null, default: "#c8e6c9"]
  iconPath varchar [not null]
  visibility visibilities [not null, default: visibilities.private]
  userId varchar [not null]
  isArchived bool [not null, default: false]
}

Table ActivityEntry {
  id integer [primary key, increment, not null]
  date timestamp [not null, default: `CURRENT_TIMESTAMP`]
  note varchar [not null]
  typeId integer [not null]
}

Table Notification {
  id varchar [primary key, not null]
  createdAt timestamp [not null, default: `CURRENT_TIMESTAMP`]
  payload varchar [not null]
  type varchar [not null]
  userId varchar [not null]
}

Table DailyHabitStat {
  id integer [primary key, increment, not null]
  completed boolean [not null]
  date timestamp [not null]
  habitId integer [null]
  streakC integer [not null, default: 0]
  streakL integer [not null, default: 0]
}

Ref: Session.userId > User.id [delete: restrict, update: cascade]

Ref: DailyHabit.userId > User.id [delete: restrict, update: cascade]

Ref: WeeklyHabit.userId > User.id [delete: restrict, update: cascade]

Ref: ActivityType.userId > User.id [delete: restrict, update: cascade]

Ref: ActivityEntry.typeId > ActivityType.id [delete: restrict, update: cascade]

Ref: Notification.userId > User.id [delete: restrict, update: cascade]

Ref: WeeklyHabitDay.habitId > WeeklyHabit.id [delete: restrict, update: cascade]

Ref: DailyHabitStat.habitId > DailyHabit.id [delete: restrict, update: cascade]

Ref: WeeklyHabitStat.habitId > WeeklyHabit.id [delete: restrict, update: cascade]

enum days {
  Mon
  Tue
  Wed
  Thu
  Fri
  Sat
  Sun
}

enum visibilities {
  private
  everyone
  friends
}
